# Maestro

./: .gitignore  .graphifyignore  AGENTS.md  ARCHITECTURE.md  CLAW_BUILD_V2_SPEC.md  CLAW_MODE_SPEC.md  CLAW_UI_ISSUES.md  DIFF-03_LANE_SLICING_SPEC.md  DIFF-04_PROVIDER_FALLBACK_SPEC.md  HANDOFF_CLAW_UX.md  IMPLEMENTATION_PLAN_STATUS.md  LIVE_CONCIERGE_COORDINATOR_SPEC.md  MAESTROCLAW_SPEC.md  MAESTRO_STATE.md  MULTI_EXECUTOR_ROUTING_SPEC.md  ORCHESTRATION_ROADMAP_OPUS-4.8.md  PRO-02_ITERATION_LOOP_SPEC.md  README.md  SEC-04_INCIDENT_SERVICE_SPEC.md  eslint.config.js  index.html  opus4.8.md  package-lock.json  tailwind.config.js
.michael/architect/architect-cli-main/: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  SECURITY.md  SEGUIMIENTO-V1.md  config.example.yaml  pyproject.toml
.michael/architect/architect-cli-main/docs/: README.md  agents-and-modes.md  ai-guide.md  architecture.md  auto-review.md  casos-de-uso.md  checkpoints.md  ci-cd-integration.md  config-reference.md  containers.md  core-loop.md  cost-management.md  data-models.md  dispatch-subagent.md  dryrun.md  eval.md  extending.md  fast-usage.md  good-practices.md  health.md  i18n.md  logging.md  mcp-server.md  parallel.md  pipelines.md  presets.md  prompt-engineering.md  ralph-loop.md  reports.md  security.md  sessions.md  telemetry.md  testing.md  tools-and-execution.md  troubleshooting.md  usage.md
.michael/architect/architect-cli-main/planes/: Plan_Implementacion_v1.md  Plan_implementacion_v2-Addendum_Mejoras.md  Plan_implementacion_v3-core.md  SEGUIMIENTO.md
.michael/architect/architect-cli-main/scripts/: test_config_loader.py  test_integration.py  test_mcp_internals.py  test_parallel_execution.py  test_phase1.py  test_phase10.py  test_phase11.py  test_phase12.py  test_phase13.py  test_phase14.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase5.py  test_phase6.py  test_phase7.py  test_phase8.py  test_phase9.py  test_phase_b.py  test_phase_c_e2e.py  test_streaming.py  test_v3_m1.py  test_v3_m2.py  test_v3_m3.py  test_v3_m4.py  (+2 more)
(+426 files in other folders)
