[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "architect-ai-cli"
version = "1.1.0"
description = "Herramienta CLI headless y agentica para orquestar agentes de IA"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "architect contributors"}
]
keywords = ["ai", "agents", "cli", "llm", "automation", "mcp"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
    "pydantic>=2.5",
    "litellm>=1.40",
    "httpx>=0.27",
    "structlog>=24.1",
    "tenacity>=8.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.21",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.5",
]
telemetry = [
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp>=1.20",
]
health = [
    "radon>=6.0",
]

[project.scripts]
architect = "architect.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/architect"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src/architect --cov-report=term-missing"

[project.urls]
Homepage = "https://diego303.github.io/architect-docs/"
Repository = "https://github.com/Diego303/architect-cli"